generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

enum UserRole {
  PLAYER
  VENUE_OWNER
  ADMIN
}

enum UserStatus {
  ACTIVE
  LOCKED
  DELETED
}

enum ConfigStatus {
  ACTIVE
  INACTIVE
}

enum ApprovalStatus {
  DRAFT
  PENDING_APPROVAL
  APPROVED
  REJECTED
}

enum VisibilityStatus {
  ACTIVE
  HIDDEN
  LOCKED
  DELETED
}

enum MatchStatus {
  OPEN
  FULL
  CLOSED
  CANCELED
}

enum JoinRequestStatus {
  PENDING
  APPROVED
  REJECTED
  CANCELED
}

enum ContentStatus {
  VISIBLE
  HIDDEN
  DELETED
}

enum ReportStatus {
  OPEN
  REVIEWED
  DISMISSED
  RESOLVED
}

enum NotificationType {
  MATCH_JOIN_REQUESTED
  MATCH_JOIN_APPROVED
  MATCH_JOIN_REJECTED
}

model User {
  id            String    @id @default(cuid())
  email         String    @unique
  emailVerified DateTime?
  passwordHash  String?
  name          String?
  image         String?
  role          UserRole
  status        UserStatus @default(ACTIVE)
  createdAt     DateTime   @default(now())
  updatedAt     DateTime   @updatedAt

  accounts             Account[]
  sessions             Session[]
  playerProfile        PlayerProfile?
  venueOwnerProfile    VenueOwnerProfile?
  ownedVenues          Venue[]
  matches              Match[]
  joinRequests         MatchJoinRequest[]
  communityPosts       CommunityPost[]
  comments             Comment[]
  notifications        Notification[]       @relation("NotificationRecipient")
  reports              Report[]             @relation("ReportReporter")
  verificationTokens   VerificationToken[]
  passwordResetTokens  PasswordResetToken[]
}

model Account {
  id                String  @id @default(cuid())
  userId            String
  type              String
  provider          String
  providerAccountId String
  refresh_token     String?
  access_token      String?
  expires_at        Int?
  token_type        String?
  scope             String?
  id_token          String?
  session_state     String?

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([provider, providerAccountId])
}

model Session {
  id           String   @id @default(cuid())
  sessionToken String   @unique
  userId       String
  expires      DateTime

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)
}

model VerificationToken {
  id        String   @id @default(cuid())
  tokenHash String   @unique
  userId    String
  expiresAt DateTime
  usedAt    DateTime?
  createdAt DateTime @default(now())

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId, expiresAt])
}

model PasswordResetToken {
  id        String   @id @default(cuid())
  tokenHash String   @unique
  userId    String
  expiresAt DateTime
  usedAt    DateTime?
  createdAt DateTime @default(now())

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId, expiresAt])
}

model PlayerProfile {
  id           String   @id @default(cuid())
  userId       String   @unique
  displayName  String
  avatarUrl    String?
  areaId       String?
  introduction String?
  availability String?
  contactInfo  Json?
  createdAt    DateTime @default(now())
  updatedAt    DateTime @updatedAt

  user        User               @relation(fields: [userId], references: [id], onDelete: Cascade)
  area        Area?              @relation(fields: [areaId], references: [id])
  sportLevels PlayerSportLevel[]
}

model PlayerSportLevel {
  id              String @id @default(cuid())
  playerProfileId String
  sportId         String
  skillLevelId    String

  playerProfile PlayerProfile @relation(fields: [playerProfileId], references: [id], onDelete: Cascade)
  sport         Sport         @relation(fields: [sportId], references: [id])
  skillLevel    SkillLevel    @relation(fields: [skillLevelId], references: [id])

  @@unique([playerProfileId, sportId])
}

model VenueOwnerProfile {
  id           String   @id @default(cuid())
  userId       String   @unique
  businessName String
  contactInfo  Json?
  createdAt    DateTime @default(now())
  updatedAt    DateTime @updatedAt

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)
}

model Sport {
  id        String       @id @default(cuid())
  name      String       @unique
  status    ConfigStatus @default(ACTIVE)
  createdAt DateTime     @default(now())
  updatedAt DateTime     @updatedAt

  skillLevels       SkillLevel[]
  playerSportLevels PlayerSportLevel[]
  venueSports       VenueSport[]
  matches           Match[]
  communityPosts    CommunityPost[]
}

model SkillLevel {
  id        String       @id @default(cuid())
  sportId   String
  name      String
  order     Int
  status    ConfigStatus @default(ACTIVE)
  createdAt DateTime     @default(now())
  updatedAt DateTime     @updatedAt

  sport             Sport              @relation(fields: [sportId], references: [id], onDelete: Cascade)
  playerSportLevels PlayerSportLevel[]
  matches           Match[]

  @@unique([sportId, name])
  @@index([sportId, order])
}

model Area {
  id        String       @id @default(cuid())
  name      String
  type      String
  city      String       @default("Hanoi")
  status    ConfigStatus @default(ACTIVE)
  createdAt DateTime     @default(now())
  updatedAt DateTime     @updatedAt

  playerProfiles PlayerProfile[]
  venues         Venue[]
  matches        Match[]
  communityPosts CommunityPost[]

  @@unique([city, name, type])
  @@index([city, name])
}

model Venue {
  id               String           @id @default(cuid())
  ownerId          String
  name             String
  address          String
  areaId           String
  description      String?
  openingHours     Json?
  referencePrice   String?
  contactInfo      Json?
  approvalStatus   ApprovalStatus   @default(PENDING_APPROVAL)
  visibilityStatus VisibilityStatus @default(ACTIVE)
  rejectionReason  String?
  viewCount        Int              @default(0)
  contactCount     Int              @default(0)
  createdAt        DateTime         @default(now())
  updatedAt        DateTime         @updatedAt

  owner  User         @relation(fields: [ownerId], references: [id], onDelete: Cascade)
  area   Area         @relation(fields: [areaId], references: [id])
  sports VenueSport[]
  images VenueImage[]

  @@index([areaId, approvalStatus, visibilityStatus])
}

model VenueSport {
  id      String @id @default(cuid())
  venueId String
  sportId String

  venue Venue @relation(fields: [venueId], references: [id], onDelete: Cascade)
  sport Sport @relation(fields: [sportId], references: [id])

  @@unique([venueId, sportId])
}

model VenueImage {
  id        String   @id @default(cuid())
  venueId   String
  url       String
  altText   String?
  sortOrder Int      @default(0)
  createdAt DateTime @default(now())

  venue Venue @relation(fields: [venueId], references: [id], onDelete: Cascade)
}

model Match {
  id              String      @id @default(cuid())
  ownerId         String
  sportId         String
  areaId          String
  time            DateTime
  requiredPlayers Int
  expectedLevelId String?
  status          MatchStatus @default(OPEN)
  description     String?
  createdAt       DateTime    @default(now())
  updatedAt       DateTime    @updatedAt

  owner         User               @relation(fields: [ownerId], references: [id], onDelete: Cascade)
  sport         Sport              @relation(fields: [sportId], references: [id])
  area          Area               @relation(fields: [areaId], references: [id])
  expectedLevel SkillLevel?        @relation(fields: [expectedLevelId], references: [id])
  joinRequests  MatchJoinRequest[]

  @@index([sportId, areaId, time, status])
}

model MatchJoinRequest {
  id          String            @id @default(cuid())
  matchId     String
  requesterId String
  status      JoinRequestStatus @default(PENDING)
  message     String?
  createdAt   DateTime          @default(now())
  updatedAt   DateTime          @updatedAt

  match     Match @relation(fields: [matchId], references: [id], onDelete: Cascade)
  requester User  @relation(fields: [requesterId], references: [id], onDelete: Cascade)

  @@unique([matchId, requesterId])
}

model CommunityPost {
  id              String        @id @default(cuid())
  authorId        String
  sportId         String
  areaId          String
  content         String
  desiredPlayTime DateTime?
  status          ContentStatus @default(VISIBLE)
  createdAt       DateTime      @default(now())
  updatedAt       DateTime      @updatedAt

  author   User      @relation(fields: [authorId], references: [id], onDelete: Cascade)
  sport    Sport     @relation(fields: [sportId], references: [id])
  area     Area      @relation(fields: [areaId], references: [id])
  comments Comment[]

  @@index([sportId, areaId, status])
}

model Comment {
  id        String        @id @default(cuid())
  postId    String
  authorId  String
  content   String
  status    ContentStatus @default(VISIBLE)
  createdAt DateTime      @default(now())
  updatedAt DateTime      @updatedAt

  post   CommunityPost @relation(fields: [postId], references: [id], onDelete: Cascade)
  author User          @relation(fields: [authorId], references: [id], onDelete: Cascade)
}

model Notification {
  id          String           @id @default(cuid())
  recipientId String
  type        NotificationType
  referenceId String
  readAt      DateTime?
  createdAt   DateTime         @default(now())

  recipient User @relation("NotificationRecipient", fields: [recipientId], references: [id], onDelete: Cascade)

  @@index([recipientId, readAt, createdAt])
}

model Report {
  id         String       @id @default(cuid())
  reporterId String
  targetType String
  targetId   String
  reason     String
  status     ReportStatus @default(OPEN)
  createdAt  DateTime     @default(now())
  updatedAt  DateTime     @updatedAt

  reporter User @relation("ReportReporter", fields: [reporterId], references: [id], onDelete: Cascade)
}
